# gx

./: .gitignore  Cargo.toml
src/: fsutil.rs  imgutil.rs  main.rs
static/css/: styles.css
templates/: index.html  list.html
