[package]
name = "gx"
version = "0.1.0"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
lazy_static = "1.4.0"
regex = "1.5.4"
chrono = "0.4.19"
image = "0.23.14"
kamadak-exif = "0.5.4"
askama = "0.10.5"
actix-files = "0.6.0-beta.6"

[profile]

[profile.dev]
codegen-units = 6
debug = false
debug-assertions = false
lto = false
opt-level = 0
panic = "abort"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
